[tool.poetry]
name = "number-vectors"
version = "0.1.0"
description = "Plot semantic similarity of numbers under GloVe."
authors = ["maxwells-daemons <aidanswope@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.2"
bokeh = "^2.1.0"
click = "^7.1.2"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.0/en_core_web_md-2.3.0.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
